# spotify-file-storage

./: .cache  .gitignore  .py  .ruff.toml  13.json  13bit_ids.db  13bit_ids.json  13bit_indentifiers.json  13ident.json  16bit_ids.json  8194-ids.txt  Cargo.toml  ID getter.py  README.md  TODO.md  Untitled-1.py  api-credentials.json  apikeys.sh  artist-queue.txt  binarytoid.json  decode.py  decode_recalibration.py  directory_info.py  enc-dict.txt  encode.py  file-encode-playlist.py  from main import api_request_manager.py  get_identifiers.py  id-getter.py  identifier_format.md  import gzip as gz.py  import json.py  import tkinter as tk.py  layout.md  main.py  new-id-list.txt  pad13lookup.py  pad_13_lookup.db  pyproject.toml  read.py  (+10 more)
fetch-track-ids/: artist-queue.txt  id-getter.py
internal_modules/: PyBinaryFile.py  SpotifyTracksFromPlaylist.py  SpotipyAPIClient.py
json/: deconstruct_track_info.py
old/: 13bit_ids.db  README.md
old/fetch-track-ids/: artist-queue.txt  id-getter.py  new-id-list.txt  seen-artists.txt
old/lookup-db-setup/: 13bit_ids.json  get_identifiers.py  pad13lookup.py
old/test-files-for-encode-decode/: secret-numbers.txt  small-text-file.txt
python/: .gitignore
python/src/sfs/: __main__.py  encryption.py
python/src/sfs/_cli/: __init__.py  _subcommand_parsers.py
src/: auth.rs  error.rs  layout.md  lib.rs  main.rs  request.rs
src/sfs/: __init__.py  __main__.py  data_handler.py  data_processor.py  playlist_encoder.py  playlistmanager.py  request_manager.py  requestmanager.py
src/sfs/_cli/: __init__.py  _arg_helpers.py  _subcommand_parsers.py  _vfs_subcommand_parsers.py
src/sfs/json/: deconstruct_track_info.py
src/sfs/old/: main.py
src/sfs/other/: identifier_generator.py
src/spotify/: auth.rs  id.rs  mod.rs
src/spotify_file_storage/: playlistmanager.py  requestmanager.py
src/spotify_file_storage/json/: 16bit_ids.json  binary_to_id.json  deconstruct_track_info.py  identifiertobinary.json
src/spotify_file_storage/old/: main.py
src/spotify_file_storage/other/: identifier_generator.py
static/: auth_fail.html  auth_success.html
test-files-for-encode-decode/: write.py
