[package]
name = "sfs"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
reqwest = "0.12.7"
serde = { version = "1.0.209", features = ["derive"] }
serde_urlencoded = "0.7.1"
tiny_http = "0.12.0"
tokio = { version = "1.39.3", features = ["full"] }
url = "2.5.2"
webbrowser = "1.0.1"
