[package]
name = "sfs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
base64 = "0.22.1"
dotenvy = "0.15.7"
rand = "0.8.5"
reqwest = "0.12.7"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
serde_urlencoded = "0.7.1"
tiny_http = "0.12.0"
tokio = { version = "1.39.3", features = ["full"] }
url = "2.5.2"
webbrowser = "1.0.1"
