[package]
name = "sfs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
dotenvy = "0.15.7"
error-stack = { version = "0.5.0", features = ["anyhow"] }
rand = "0.8.5"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
serde_urlencoded = "0.7.1"
thiserror = "1.0.64"
tiny_http = "0.12.0"
tokio = { version = "1.39.3", features = ["full"] }
url = "2.5.2"
webbrowser = "1.0.1"
