[project]
name = "spotify-file-storage"
version = "0.0.1"
description = "A proof of concept CLI tool that allows for uploading and downloading files from Spotify playlists."
authors = [
    { name = "Jack Dyre", email = "83248599+JackDyre@users.noreply.github.com" }
]
dependencies = [
    "spotipy>=2.24.0",
    "polars>=1.3.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pm = "spotify_file_storage.playlistmanager:main"
mk = "spotify_file_storage.other.identifier_generator:main"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/spotify_file_storage"]
