[project]
name = "SpotifyFileStorage"
version = "0.0.0"
description = "A proof of concept CLI tool that allows for uploading and downloading files from Spotify playlists."
authors = [
    { name = "Jack Dyre", email = "83248599+JackDyre@users.noreply.github.com" }
]
dependencies = [
    "spotipy>=2.24.0",
    "polars>=1.3.0",
    "cryptography>=43.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
main = "sfs.__main__:main"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sfs"]
